tests/machine/x/lua/sum_builtin.error
line 21: run error: exit status 1
lua: /workspace/mochi/tests/machine/x/lua/sum_builtin.lua:21: attempt to call a nil value (global 'sum')
stack traceback:
	/workspace/mochi/tests/machine/x/lua/sum_builtin.lua:21: in main chunk
	[C]: in ?

